<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.cnr.isti.hpclab</groupId>
    <artifactId>terrier-eliasfano</artifactId>
    <version>1.5.2</version>
    <packaging>jar</packaging>
    <name>Elias-Fano compression for Terrier 5.2</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <terrier.version>5.2</terrier.version>

    <license.inceptionYear>2018</license.inceptionYear>
    <license.organizationName>Nicola Tonellotto</license.organizationName>
  </properties>

    <licenses>
        <license>
          <name>GNU Lesser General Public License</name>
          <url>http://www.gnu.org/licenses/lgpl.txt</url>
          <distribution>manual</distribution>
        </license>
    </licenses>

  <developers>
    <developer>
      <id>khast</id>
      <email>nicola.tonellotto@gmail.com</email>
      <name>Nicola Tonellotto</name>
    </developer>
  </developers>

  <dependencies>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>it.unimi.dsi</groupId>
      <artifactId>dsiutils</artifactId>
      <version>2.6.5</version>
    </dependency>

    <dependency>
      <groupId>org.terrier</groupId>
      <artifactId>terrier-core</artifactId>
      <version>${terrier.version}</version>
    </dependency>

    <dependency>
      <groupId>org.terrier</groupId>
      <artifactId>terrier-batch-indexers</artifactId>
      <version>${terrier.version}</version>
    </dependency>

    <dependency>
      <groupId>args4j</groupId>
      <artifactId>args4j</artifactId>
      <version>2.33</version>
      <type>jar</type>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>me.tongfei</groupId>
      <artifactId>progressbar</artifactId>
      <version>0.8.1</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.5</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.5</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.12</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <source>${maven.compiler.target}</source>
          <target>${maven.compiler.source}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.10</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>true</downloadJavadocs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.0.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>appassembler-maven-plugin</artifactId>
        <version>1.10</version>
        <configuration>
          <assembleDirectory>${project.build.directory}</assembleDirectory>
          <extraJvmArguments>-Xms1G -Xmx50G -XX:+UseConcMarkSweepGC -XX:-UseGCOverheadLimit</extraJvmArguments>
          <platforms>unix</platforms>
          <projectArtifactFirstInClassPath>true</projectArtifactFirstInClassPath>
          <programs>
            <program>
              <mainClass>it.cnr.isti.hpclab.ef.Generator</mainClass>
              <id>ef-convert</id>
            </program>
            <program>
              <mainClass>it.cnr.isti.hpclab.ef.Invert2Direct</mainClass>
              <id>ef-inv2dir</id>
            </program>
          </programs>
        </configuration>
        <executions>
            <execution>
                <id>assemble</id>
                <goals>
                    <goal>assemble</goal>
                </goals>
            </execution>
        </executions>
      </plugin>

    </plugins>

  </build>

</project>
